--- a/report.html
+++ b/report.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="home.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="expenses.html">Expenses</a>
@@ -25,7 +25,7 @@
 
 
 
-    <script src="./js/expense.js" defer></script>
+    <script src="./js/report.js"></script>
 </body>
 </html>
 
