--- a/report.html
+++ b/report.html
@@ -22,6 +22,13 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section id="report">
+            <h2>Expense Report</h2>
+            <p>Total Expenses: <span id="total-expenses">$0</span></p>
+            <p>Remaining Budget: <span id="remaining-budget">$0</span></p>
+        </section>
+    </main>
 
 
 
