Update report.html and expenses.html pages

--- a/report.html
+++ b/report.html
@@ -28,10 +28,19 @@
             <p>Total Expenses: <span id="total-expenses">$0</span></p>
             <p>Remaining Budget: <span id="remaining-budget">$0</span></p>
         </section>
+        <h1>Expense Summary</h1>
+        <section id="expense-summary">
+            <div>
+                <h2>Total Income: <span id="total-income">$0</span></h2>
+                <h2>Total Expenses: <span id="total-expenses">$0</span></h2>
+                <h2>Remaining Budget: <span id="remaining-budget">$0</span></h2>
+            </div>
+
+            <h2>Detailed Summary</h2>
+            <ul id="expense-details"></ul>
+        </section>
     </main>
-
-
-
+    </main>
     <script src="./js/report.js"></script>
 </body>
 </html>
