Create Readme file

--- a/expenses.html
+++ b/expenses.html
@@ -134,7 +134,7 @@
 
                     <option value="transportation">Transportation</option>
 
-                    <option value="gifts">Gifts</option>
+                    <option value="gifts">Loans</option>
 
                     <option value="miscellaneous">Miscellaneous</option>
 
@@ -155,7 +155,7 @@
                     <span id="total-expenses">$0.00</span>
                 </div>
                 <div class="summary-item">
-                    <span>Remaining Budget:</span>
+                    <span>Surplus/Deficit:</span>
                     <span id="remaining-budget">$0.00</span>
                 </div>
             </section>
