--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section class="intro">
             <h2>Manage Your Finances with Ease</h2>
             <p>Track your expenses, set reminders, and achieve financial stability effortlessly.</p>
-            <p>To effectively be able to do so join us in our quest to assist you to maximise the use of your recourses.</p>
+            <p>To effectively be able to do so join us in our quest to assist you to maximise the use of your resources.</p>
             <p>Struggling to keep track of your expenses? Want to save more and spend smarter? Smart Budget Planner makes budgeting effortless! </p>
             <ul>
                 <li>
@@ -41,7 +41,7 @@
                     <p>Easy & Accessible – Designed for all users, from beginners to experts.</p>
                 </li>
             </ul>
-            <p class="see">To learn more about us click on "Expenses" to set up your priorities right.</p>
+            <p class="see">To learn more about us click on "Smart Budget planner" to set up your priorities right.</p>
             <p>Join today and take the first step toward financial freedom! </p>
         </section>
         <section>
