--- a/report.html
+++ b/report.html
@@ -26,14 +26,14 @@
         <section id="report">
             <h2>Expense Report</h2>
             <p>Total Expenses: <span id="total-expenses">$0</span></p>
-            <p>Remaining Budget: <span id="remaining-budget">$0</span></p>
+            <p>Surplus/Deficit: <span id="remaining-budget">$0</span></p>
         </section>
         <h1>Expense Summary</h1>
         <section id="expense-summary">
             <div>
                 <h2>Total Income: <span id="total-income">$0</span></h2>
                 <h2>Total Expenses: <span id="total-expenses">$0</span></h2>
-                <h2>Remaining Budget: <span id="remaining-budget">$0</span></h2>
+                <h2>Surplus/Deficit: <span id="remaining-budget">$0</span></h2>
             </div>
 
             <h2>Detailed Summary</h2>
