Add specific changes

--- a/report.html
+++ b/report.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smart Budget Tracker</title>
+    <title>Smart Budget Tracker - Report</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -22,26 +22,32 @@
             </ul>
         </nav>
     </header>
+
     <main>
         <section id="report">
             <h2>Expense Report</h2>
-            <p>Total Expenses: <span id="total-expenses">$0</span></p>
-            <p>Surplus/Deficit: <span id="remaining-budget">$0</span></p>
-        </section>
-        <h1>Expense Summary</h1>
-        <section id="expense-summary">
-            <div>
-                <h2>Total Income: <span id="total-income">$0</span></h2>
-                <h2>Total Expenses: <span id="total-expenses">$0</span></h2>
-                <h2>Surplus/Deficit: <span id="remaining-budget">$0</span></h2>
-            </div>
+            <p>Total Income: <span id="total-income">$0.00</span></p>
 
-            <h2>Detailed Summary</h2>
-            <ul id="expense-details"></ul>
+            <p>Total Expenses: <span id="total-expenses">$0.00</span></p>
+
+            <p>Surplus/Deficit: <span id="remaining-budget">$0.00</span></p>
+
         </section>
+
+        <h2>Detailed Summary</h2>
+        <ul id="expense-details">
+        </ul>
     </main>
-    </main>
+    <p>For more information visit us using our email:
+        joramwmuya@gmail.com
+    </p>
+    <p>Or you can call us on:
+        0791982384
+    </p>
+    <footer>
+        <p>&copy; 2025 Smart Budget Planner. All rights reserved.</p>
+    </footer>
+
     <script src="./js/report.js"></script>
 </body>
 </html>
-
